# sbi-xray-calibration

./: .gitignore  README.md  RESULTS.md  pyproject.toml  requirements.txt
configs/: calibration.yaml  calibration_nicer.yaml  calibration_prod.yaml  detect.yaml  detect_nicer.yaml  gonogo_seed101.yaml  gonogo_seed202.yaml  gonogo_seed303.yaml  gonogo_uncapped.yaml  make_plots.yaml  misspec_modelA_dev.yaml  ns_bench.yaml  ns_bench_nicer.yaml  sim_modelA_dev.yaml  sim_modelA_dev_train.yaml  sim_modelA_prod.yaml  sim_modelA_prod_train.yaml  sim_nicer_prod.yaml  sim_nicer_prod_train.yaml  train_npe_dev.yaml  train_npe_nicer.yaml  train_npe_prod.yaml
docs/: gain_shift_notes.md
notebooks/: walkthrough.ipynb
outputs/detect/: auc_table.md  consequence.md  results.jsonl
outputs/detect_nicer/: results.jsonl
outputs/diagnostics/: learning_curve_dev.json  validation_prod_summary.json
outputs/gonogo/: summary.jsonl
scripts/: analyze_detect.py  analyze_ns_bench.py  analyze_ns_bench_countctl.py  bench_cnn_device.py  fetch_nicer_response.py  gonogo_verdict.py  make_coverage_money_panel.py  make_money_plot.py  make_nicer_fig.py  make_nicer_sbc_fig.py  make_plots.py  make_support_figs.py  ns_pilot_timing.py  paired_ns_gain_check.py  proto_benchmark.py  proto_brems.py  proto_gain_shift.py  run_all.py  run_calibration.py  run_detect_benchmark.py  run_gonogo.py  run_learning_curve.py  run_ns_benchmark.py  run_train_npe.py  run_validate_npe.py
src/sbixcal/: detect.py  (+9 more)
tests/: test_calibrate.py  test_detect.py  test_gonogo.py  test_ns_bench.py  test_simulate.py  test_train_npe.py
(+11 files in other folders)
