[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sbixcal"
version = "0.1.0"
description = "Calibration + misspecification detection for SBI X-ray spectral fitting"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
